--- a/habitats_map.Rmd
+++ b/habitats_map.Rmd
@@ -204,6 +204,41 @@ tm_all <- tmap_arrange(tm_ncsr, tm_nccsr, tm_ccsr, tm_scsr)
 tmap_save(tm_all, filename = "figs/mpa_statussplit_regions.png")
 ```
 
+```{r, message=FALSE}
+
+tmap_mode("plot")
+
+tm_ncsr <- tm_shape(ca) + 
+  tm_borders("black", lwd = .5)+ 
+tm_shape(habitat_NCSR_plot) + 
+  tm_symbols(col = "habitat", alpha = 0.3, border.lwd = 0, size = .25, legend.col.show = FALSE, palette= "-Set1") + 
+  tm_facets(by = c("reserve_st"), sync = TRUE)
+
+tm_nccsr <- tm_shape(ca) + 
+  tm_borders("black", lwd = .5)+ 
+tm_shape(habitat_NCCSR_plot) + 
+  tm_symbols(col = "habitat", alpha = 0.3, border.lwd = 0, size = .25, legend.col.show = FALSE, palette= "-Set1") + 
+  tm_facets(by = c("reserve_st"))
+
+tm_ccsr <- tm_shape(ca) + 
+  tm_borders("black", lwd = .5)+ 
+tm_shape(habitat_CCSR_plot) + 
+  tm_symbols(col = "habitat", alpha = 0.3, border.lwd = 0, size = .25, legend.col.show = FALSE, palette= "-Set1") + 
+  tm_facets(by = c("reserve_st"), )
+
+tm_scsr <- tm_shape(ca) + 
+  tm_borders("black", lwd = .5)+ 
+tm_shape(habitat_SCSR_plot) + 
+  tm_symbols(col = "habitat", alpha = 0.3, border.lwd = 0, size = .25, legend.col.show = FALSE, palette= "-Set1") + 
+  tm_facets(by = c("reserve_st"), free.coords = T, inside.original.bbox = F)
+
+tm_all <- tmap_arrange(tm_ncsr, tm_nccsr, tm_ccsr, tm_scsr)
+
+tm_all
+
+tmap_save(tm_all, filename = "figs/mpa_habitatsplit_regions.png")
+
+```
 
 
 
