--- a/subteam-analyses/MPA-performance/Q1-meta-analysis/Q1-meta-analyses.Rmd
+++ b/subteam-analyses/MPA-performance/Q1-meta-analysis/Q1-meta-analyses.Rmd
@@ -23,7 +23,7 @@ library(reshape2)
 Import and initialize data
 ```{r}
 data_path <- "/home/shares/ca-mpa/data/sync-data"
-input_file <- "Ecol_perform_metrics.xlsx" 
+input_file <- "Ecol_perform_metrics_means.xlsx" 
 
 meta.data <- readxl::read_excel(file.path(data_path, input_file), sheet=1, skip = 0, na="NA")
 
@@ -33,29 +33,68 @@ meta.data <- readxl::read_excel(file.path(data_path, input_file), sheet=1, skip 
 Calculate means for each variable and indicator at the state and regional level
 ```{r}
 #calculate state level means 
-meta.data$mpa_designation<- recode_factor(meta.data$mpa_designation, SC="MPA", SMR_SMCA="MPA", SMCA="MPA",SMR="MPA") ###========consider "SMCA" and "SMR" as "MPA"========##
-state.means<- meta.data%>% 
+meta.data$mpa_designation<- recode_factor(meta.data$mpa_designation, reference="REF", SC="MPA", SMR_SCMA="MPA", SMR_SMCA="MPA", SMCA="MPA",SMR="MPA") ###========consider "SMCA" and "SMR" as "MPA"========##
+
+#state means error structure 1 -- sigma calculated across all sampling years
+state.yr.means<- meta.data%>% 
               group_by(group,mpa_designation,variable,indicator)%>%
-              summarize(group.mean = mean(mean,na.rm=TRUE), 
-                        sd=sd(mean), # standard deviation of across MPAs where indicator was observed/recorded. 
-                        n=n()) %>% #no. MPA 'sites' where year is unit of rep
+              summarize(yr.mean = mean(mean,na.rm=TRUE), 
+                        sd=sd(mean), # standard deviation across MPAs AND YEARS where indicator was observed/recorded. 
+                        n=n()) %>% #no. MPA 'sites' where year is unit of rep 
               pivot_wider(names_from = mpa_designation, #convert to wide format for {metafor}
-              values_from = c(group.mean, sd, n)
+              values_from = c(yr.mean, sd, n)
               #names_glue = "{mpa_designation}_{value}")
 )
 
-#calculate region level means
+#state means error structure 2 -- sigma calculated from MPA means. 
+state.MPAlevel.means<- meta.data%>% 
+              group_by(group,affiliated_mpa, mpa_designation,variable,indicator)%>%
+              summarize(group.mean = mean(mean,na.rm=TRUE))  #no. MPA 'sites' where year is unit of rep
+              
+state.means<- state.MPAlevel.means%>%
+              group_by(group,mpa_designation,variable,indicator)%>%
+              summarize(group.avg = mean(group.mean,na.rm=TRUE),
+                        sd=sd(group.mean),
+                        n=n()) %>% #no. MPA 'sites' where year is unit of rep
+            pivot_wider(names_from = mpa_designation, #convert to wide format for {metafor}
+              values_from = c(group.avg, sd, n)
+              #names_glue = "{mpa_designation}_{value}")
+)
 
-region.means<- meta.data%>%
+
+#region means error structure 1 -- sigma calculated across all sampling years
+
+
+region.yr.means<- meta.data%>%
   group_by(group,mlpa_region, mpa_designation,variable,indicator)%>%
-  summarize(group.mean = mean(mean,na.rm=TRUE), 
+  summarize(yr.mean = mean(mean,na.rm=TRUE), 
             sd=sd(mean), # standard deviation of across MPAs where indicator was observed/recorded
             n=n()) %>%
   pivot_wider(names_from = mpa_designation,
-              values_from = c(group.mean, sd, n)
+              values_from = c(yr.mean, sd, n)
   )
      
-region.means
+View(region.yr.means)
+
+
+#region means error structure 2 -- sigma calculated from MPA means summarized across years. 
+region.MPAlevel.means<- meta.data%>% 
+              group_by(group,affiliated_mpa, mlpa_region, mpa_designation,variable,indicator)%>%
+              summarize(group.mean = mean(mean,na.rm=TRUE))  #no. MPA 'sites' where year is unit of rep
+              
+region.means<- region.MPAlevel.means%>%
+              group_by(group,mlpa_region,mpa_designation, variable,indicator)%>%
+              summarize(group.avg = mean(group.mean,na.rm=TRUE),
+                        sd=sd(group.mean),
+                        n=n()) %>% #no. MPA 'sites' where year is unit of rep
+            pivot_wider(names_from = mpa_designation, #convert to wide format for {metafor}
+              values_from = c(group.avg, sd, n)
+              #names_glue = "{mpa_designation}_{value}")
+)
+
+View(region.means)
+
+
 ```
 
 ***Part 1 - Meta analyses using SMD on state-level and regional regulatory status***
@@ -64,7 +103,7 @@ region.means
 #subset focal response metrics of interest
 ```{r}
 #state.biomass<- state.means %>%
-  #filter(variable=="Targetted Fish", indicator == "Biomass")
+  #filter(variable=="Targeted Fish", indicator == "Biomass")
 
 #Diversity state level
 state.means$indicator<- recode_factor(state.means$indicator, Diversity="diversity")
@@ -230,6 +269,7 @@ text(x =-0.3, y = 6.5, "REF",  pos=2, col="blue", font=2)
 text(x =0.6, y = 6.5, "MPA",  pos=2, col="red ", font=2)
 text(x=1.95, y=6.5,pos=2, "SMD", font=2)
 text(x=2.5, y=6.5,pos=2, "[95% CI]", font=2)
+
 ```
 
 #generate forest plots for richness
@@ -263,6 +303,330 @@ text(x =0.6, y = 6.5, "MPA",  pos=2, col="red ", font=2)
 text(x=1.95, y=6.5,pos=2, "SMD", font=2)
 text(x=2.5, y=6.5,pos=2, "[95% CI]", font=2)
 ```
+
+
+#Plot that calucaltes MPA means across years then calculates sigma
+```{r}
+
+
+knitr::opts_chunk$set(fig.width=12, fig.height=24) 
+
+
+
+region.means$indicator<- recode_factor(region.means$indicator, Diversity="diversity")
+region.means$indicator<- recode_factor(region.means$indicator, shannon="diversity")
+
+smd.data <- as.data.frame(region.means%>%
+  filter(variable=="all species"| variable=="All Fish"| variable=="INVALG",
+           indicator == "diversity"))
+  
+smd.final <- select(smd.data, -c(variable)) %>%
+            arrange(factor(mlpa_region, level=c("North","Central","South")))
+
+
+
+
+
+
+### calculate SMD sampling variances (and use
+### the 'slab' argument to store study labels as part of the data frame)
+
+dat <- escalc(measure="SMD", m1i=group.avg_MPA, m2i=group.avg_REF, sd1i=sd_MPA, sd2i=sd_REF, n1i=n_MPA, n2i=n_REF, data=smd.final, slab=paste(group)) 
+
+#fit random effects model
+res <- rma(yi,vi,method="REML", data=dat, slab=paste(group)) 
+
+
+### a little helper function to add Q-test, I^2, and tau^2 estimate info
+### a little helper function to add Q-test, I^2, and tau^2 estimate info
+mlabfun <- function(text, y) {
+   bquote(paste(.(text),
+      " (Q = ", .(formatC(y$QE, digits=2, format="f")),
+      ", df = ", .(y$k - y$p),
+      ", p ", .(formatC(y$QEp, digits=2, format="f")), "; ",
+      I^2, " = ", .(formatC(y$I2, digits=1, format="f")), "%, ",
+      tau^2, " = ", .(formatC(y$tau2, digits=2, format="f")), ")"))}
+
+
+### set up forest plot (with 2x2 table counts added; the 'rows' argument is
+### used to specify in which rows the outcomes will be plotted)
+forest(res, xlim=c(-8, 6), #at=log(c(0.05, 0.25, 1, 4)), #atransf=exp,
+       #ilab=cbind(dat$tpos, dat$tneg, dat$cpos, dat$cneg),
+       #ilab.xpos=c(-9.5,-8,-6,-4.5), 
+       cex=0.75, 
+       ylim=c(-3, 24),
+       order=order(factor(dat$mlpa_region, level=c("South","Central","North"))), 
+       rows=c(2:6,9:13,16:20),
+       mlab=mlabfun("RE Model", res),
+       psize=1.3, header="Region | Monitoring Group")
+
+### set font expansion factor (as in forest() above) and use a bold font
+op <- par(cex=0.75, font=2)
+ 
+### add additional column headings to the plot
+
+### add text for the subgroups
+text(-8, c(21,14,7), pos=4, c("North",
+                               "Central",
+                               "South"))
+
+
+### set par back to the original settings
+par(cex=1.05)
+ 
+### fit random-effects model in the three subgroups
+res.n <- rma(yi, vi, subset=(mlpa_region=="North"), data=dat, slab=paste(group, mlpa_region))
+res.c <- rma(yi, vi, subset=(mlpa_region=="Central"), data=dat, slab=paste(group, mlpa_region))
+res.s <- rma(yi, vi, subset=(mlpa_region=="South"),  data=dat, slab=paste(group, mlpa_region))
+
+### add summary polygons for the three subgroups
+#addpoly(res.n, row=11, mlab=mlabfun("RE Model for Subgroup", res.n))
+addpoly(res.n, row=15, mlab=mlabfun("RE Model for Subgroup", y=res.n))
+addpoly(res.c, row= 8, mlab=mlabfun("RE Model for Subgroup", y=res.c))
+addpoly(res.s, row= 1, mlab=mlabfun("RE Model for Subgroup", y=res.s))
+
+
+### fit meta-regression model to test for subgroup differences
+res <- rma(yi, vi, mods = ~ mlpa_region, data=dat)
+ 
+### add text for the test of subgroup differences
+text(-8, -2.5, pos=4, cex=0.75, bquote(paste("Test for Subgroup Differences: ",
+     Q[M], " = ", .(formatC(res$QM, digits=2, format="f")), ", df = ", .(res$p - 1),
+     ", p = ", .(formatC(res$QMp, digits=2, format="f")))))
+
+text(x =-0.2, y = 23, "REF",  pos=2, col="blue", font=2)
+text(x =1.2, y = 23, "MPA",  pos=2, col="red ", font=2)
+text(x =-4.8, y = 24.5, "Diversity (Shannon H')",  cex=0.8, pos=2, font=3)
+
+
+
+```
+
+
+
+#Plot that uses year as independent reps (see n_MPA n_REF)
+```{r}
+
+
+knitr::opts_chunk$set(fig.width=12, fig.height=24) 
+
+
+
+
+region.yr.means$indicator<- recode_factor(region.means$indicator, Diversity="diversity")
+region.yr.means$indicator<- recode_factor(region.means$indicator, shannon="diversity")
+
+
+smd.data <- as.data.frame(region.yr.means%>%
+  filter(variable=="all species"| variable=="All Fish"| variable=="INVALG",
+           indicator == "diversity"))
+  
+smd.final <- select(smd.data, -c(variable)) %>%
+            arrange(factor(mlpa_region, level=c("North","Central","South")))
+
+
+
+
+
+
+### calculate SMD sampling variances (and use
+### the 'slab' argument to store study labels as part of the data frame)
+
+dat <- escalc(measure="SMD", m1i=yr.mean_MPA, m2i=yr.mean_REF, sd1i=sd_MPA, sd2i=sd_REF, n1i=n_MPA, n2i=n_REF, data=smd.final, slab=paste(group)) 
+
+#fit random effects model
+res <- rma(yi,vi,method="REML", data=dat, slab=paste(group)) 
+
+
+### a little helper function to add Q-test, I^2, and tau^2 estimate info
+### a little helper function to add Q-test, I^2, and tau^2 estimate info
+mlabfun <- function(text, y) {
+   bquote(paste(.(text),
+      " (Q = ", .(formatC(y$QE, digits=2, format="f")),
+      ", df = ", .(y$k - y$p),
+      ", p ", .(formatC(y$QEp, digits=2, format="f")), "; ",
+      I^2, " = ", .(formatC(y$I2, digits=1, format="f")), "%, ",
+      tau^2, " = ", .(formatC(y$tau2, digits=2, format="f")), ")"))}
+
+
+### set up forest plot (with 2x2 table counts added; the 'rows' argument is
+### used to specify in which rows the outcomes will be plotted)
+forest(res, xlim=c(-8, 6), #at=log(c(0.05, 0.25, 1, 4)), #atransf=exp,
+       #ilab=cbind(dat$tpos, dat$tneg, dat$cpos, dat$cneg),
+       #ilab.xpos=c(-9.5,-8,-6,-4.5), 
+       cex=0.75, 
+       ylim=c(-3, 24),
+       order=order(factor(dat$mlpa_region, level=c("South","Central","North"))), 
+       rows=c(2:5,9:12,16:19),
+       mlab=mlabfun("RE Model", res),
+       psize=1.3, header="Region | Monitoring Group")
+
+### set font expansion factor (as in forest() above) and use a bold font
+op <- par(cex=0.75, font=2)
+ 
+### add additional column headings to the plot
+
+### add text for the subgroups
+text(-8, c(21,14,7), pos=4, c("North",
+                               "Central",
+                               "South"))
+
+
+### set par back to the original settings
+par(cex=1.05)
+ 
+### fit random-effects model in the three subgroups
+res.n <- rma(yi, vi, subset=(mlpa_region=="North"), data=dat, slab=paste(group, mlpa_region))
+res.c <- rma(yi, vi, subset=(mlpa_region=="Central"), data=dat, slab=paste(group, mlpa_region))
+res.s <- rma(yi, vi, subset=(mlpa_region=="South"),  data=dat, slab=paste(group, mlpa_region))
+
+### add summary polygons for the three subgroups
+#addpoly(res.n, row=11, mlab=mlabfun("RE Model for Subgroup", res.n))
+addpoly(res.n, row=15, mlab=mlabfun("RE Model for Subgroup", y=res.n))
+addpoly(res.c, row= 8, mlab=mlabfun("RE Model for Subgroup", y=res.c))
+addpoly(res.s, row= 1, mlab=mlabfun("RE Model for Subgroup", y=res.s))
+
+
+### fit meta-regression model to test for subgroup differences
+res <- rma(yi, vi, mods = ~ mlpa_region, data=dat)
+ 
+### add text for the test of subgroup differences
+text(-8, -2.5, pos=4, cex=0.75, bquote(paste("Test for Subgroup Differences: ",
+     Q[M], " = ", .(formatC(res$QM, digits=2, format="f")), ", df = ", .(res$p - 1),
+     ", p = ", .(formatC(res$QMp, digits=2, format="f")))))
+
+text(x =-0.2, y = 23, "REF",  pos=2, col="blue", font=2)
+text(x =1.2, y = 23, "MPA",  pos=2, col="red ", font=2)
+text(x =-4.8, y = 24.5, "Diversity (Shannon H')",  cex=0.8, pos=2, font=3)
+
+
+
+```
+
+
+
+
+
+# by focal year - 2018
+```{r}
+
+region.MPAlevel.2018<- meta.data%>% 
+              group_by(group,year, affiliated_mpa, mlpa_region, mpa_designation,variable,indicator)%>%
+              filter(year=='2018')%>%
+              filter(group=='CCFRP'|group=='Kelp forest-SWATH' | group=='Kelp forest-UPC' | group=='rocky-LT' )%>%
+              summarize(group.mean = mean(mean,na.rm=TRUE))  #no. MPA 'sites' where year is unit of rep
+              
+region.2018<- region.MPAlevel.2018%>%
+              group_by(group,mlpa_region,mpa_designation, variable,indicator)%>%
+              summarize(group.avg = mean(group.mean,na.rm=TRUE),
+                        sd=sd(group.mean),
+                        n=n()) %>% #no. MPA 'sites' where year is unit of rep
+            pivot_wider(names_from = mpa_designation, #convert to wide format for {metafor}
+              values_from = c(group.avg, sd, n)
+              #names_glue = "{mpa_designation}_{value}")
+)
+
+
+
+
+
+region.2018$indicator<- recode_factor(region.2018$indicator, Diversity="diversity")
+region.2018$indicator<- recode_factor(region.2018$indicator, shannon="diversity")
+
+smd.data <- as.data.frame(region.2018%>%
+  filter(variable=="all species"| variable=="All Fish"| variable=="INVALG",
+           indicator == "diversity"))
+  
+smd.final <- select(smd.data, -c(variable)) %>%
+            arrange(factor(mlpa_region, level=c("North","Central","South")))
+
+View(smd.final)
+
+
+
+
+### calculate SMD sampling variances (and use
+### the 'slab' argument to store study labels as part of the data frame)
+
+dat <- escalc(measure="SMD", m1i=group.avg_MPA, m2i=group.avg_REF, sd1i=sd_MPA, sd2i=sd_REF, n1i=n_MPA, n2i=n_REF, data=smd.final, slab=paste(group)) 
+
+#fit random effects model
+res <- rma(yi,vi,method="REML", data=dat, slab=paste(group)) 
+
+
+### a little helper function to add Q-test, I^2, and tau^2 estimate info
+### a little helper function to add Q-test, I^2, and tau^2 estimate info
+mlabfun <- function(text, y) {
+   bquote(paste(.(text),
+      " (Q = ", .(formatC(y$QE, digits=2, format="f")),
+      ", df = ", .(y$k - y$p),
+      ", p ", .(formatC(y$QEp, digits=2, format="f")), "; ",
+      I^2, " = ", .(formatC(y$I2, digits=1, format="f")), "%, ",
+      tau^2, " = ", .(formatC(y$tau2, digits=2, format="f")), ")"))}
+
+
+### set up forest plot (with 2x2 table counts added; the 'rows' argument is
+### used to specify in which rows the outcomes will be plotted)
+forest(res, xlim=c(-8, 6), #at=log(c(0.05, 0.25, 1, 4)), #atransf=exp,
+       #ilab=cbind(dat$tpos, dat$tneg, dat$cpos, dat$cneg),
+       #ilab.xpos=c(-9.5,-8,-6,-4.5), 
+       cex=0.75, 
+       ylim=c(-3, 24),
+       order=order(factor(dat$mlpa_region, level=c("South","Central","North"))), 
+       rows=c(2:5,8:11,14:17),
+       mlab=mlabfun("RE Model", res),
+       psize=1.3, header="Region | Monitoring Group")
+
+### set font expansion factor (as in forest() above) and use a bold font
+op <- par(cex=0.75, font=2)
+ 
+### add additional column headings to the plot
+
+### add text for the subgroups
+text(-8, c(21,14,7), pos=4, c("North",
+                               "Central",
+                               "South"))
+
+
+### set par back to the original settings
+par(cex=1.05)
+ 
+### fit random-effects model in the three subgroups
+res.n <- rma(yi, vi, subset=(mlpa_region=="North"), data=dat, slab=paste(group, mlpa_region))
+res.c <- rma(yi, vi, subset=(mlpa_region=="Central"), data=dat, slab=paste(group, mlpa_region))
+res.s <- rma(yi, vi, subset=(mlpa_region=="South"),  data=dat, slab=paste(group, mlpa_region))
+
+### add summary polygons for the three subgroups
+#addpoly(res.n, row=11, mlab=mlabfun("RE Model for Subgroup", res.n))
+addpoly(res.n, row=15, mlab=mlabfun("RE Model for Subgroup", y=res.n))
+addpoly(res.c, row= 8, mlab=mlabfun("RE Model for Subgroup", y=res.c))
+addpoly(res.s, row= 1, mlab=mlabfun("RE Model for Subgroup", y=res.s))
+
+
+### fit meta-regression model to test for subgroup differences
+res <- rma(yi, vi, mods = ~ mlpa_region, data=dat)
+ 
+### add text for the test of subgroup differences
+text(-8, -2.5, pos=4, cex=0.75, bquote(paste("Test for Subgroup Differences: ",
+     Q[M], " = ", .(formatC(res$QM, digits=2, format="f")), ", df = ", .(res$p - 1),
+     ", p = ", .(formatC(res$QMp, digits=2, format="f")))))
+
+text(x =-0.2, y = 23, "REF",  pos=2, col="blue", font=2)
+text(x =1.2, y = 23, "MPA",  pos=2, col="red ", font=2)
+text(x =-4.8, y = 24.5, "Diversity (Shannon H')",  cex=0.8, pos=2, font=3)
+
+
+
+```
+
+
+
+
+
+
+
+
+
 
 
 
