--- a/subteam-analyses/MPA-performance/Q1-meta-analysis/Q1-meta-analyses.Rmd
+++ b/subteam-analyses/MPA-performance/Q1-meta-analysis/Q1-meta-analyses.Rmd
@@ -325,7 +325,7 @@ smd.final <- select(smd.data, -c(variable)) %>%
 
 
 
-
+View(smd.final)
 
 
 ### calculate SMD sampling variances (and use
@@ -457,7 +457,7 @@ forest(res, xlim=c(-8, 6), #at=log(c(0.05, 0.25, 1, 4)), #atransf=exp,
        cex=0.75, 
        ylim=c(-3, 24),
        order=order(factor(dat$mlpa_region, level=c("South","Central","North"))), 
-       rows=c(2:5,9:12,16:19),
+       rows=c(2:6,9:13,16:20),
        mlab=mlabfun("RE Model", res),
        psize=1.3, header="Region | Monitoring Group")
 
@@ -507,13 +507,119 @@ text(x =-4.8, y = 24.5, "Diversity (Shannon H')",  cex=0.8, pos=2, font=3)
 
 
 
-# by focal year - 2018
+
+#Richness plot that uses year as independent reps (see n_MPA n_REF)
+```{r}
+
+
+knitr::opts_chunk$set(fig.width=12, fig.height=24) 
+
+
+
+
+region.yr.means$indicator<- recode_factor(region.means$indicator, Richness="richness")
+
+
+smd.data <- as.data.frame(region.yr.means%>%
+  filter(variable=="all species"| variable=="All Fish"| variable=="INVALG",
+           indicator == "richness"))
+  
+smd.final <- select(smd.data, -c(variable)) %>%
+            arrange(factor(mlpa_region, level=c("North","Central","South")))
+
+
+
+
+
+
+### calculate SMD sampling variances (and use
+### the 'slab' argument to store study labels as part of the data frame)
+
+dat <- escalc(measure="SMD", m1i=yr.mean_MPA, m2i=yr.mean_REF, sd1i=sd_MPA, sd2i=sd_REF, n1i=n_MPA, n2i=n_REF, data=smd.final, slab=paste(group)) 
+
+#fit random effects model
+res <- rma(yi,vi,method="REML", data=dat, slab=paste(group)) 
+
+
+### a little helper function to add Q-test, I^2, and tau^2 estimate info
+### a little helper function to add Q-test, I^2, and tau^2 estimate info
+mlabfun <- function(text, y) {
+   bquote(paste(.(text),
+      " (Q = ", .(formatC(y$QE, digits=2, format="f")),
+      ", df = ", .(y$k - y$p),
+      ", p ", .(formatC(y$QEp, digits=2, format="f")), "; ",
+      I^2, " = ", .(formatC(y$I2, digits=1, format="f")), "%, ",
+      tau^2, " = ", .(formatC(y$tau2, digits=2, format="f")), ")"))}
+
+
+### set up forest plot (with 2x2 table counts added; the 'rows' argument is
+### used to specify in which rows the outcomes will be plotted)
+forest(res, xlim=c(-8, 6), #at=log(c(0.05, 0.25, 1, 4)), #atransf=exp,
+       #ilab=cbind(dat$tpos, dat$tneg, dat$cpos, dat$cneg),
+       #ilab.xpos=c(-9.5,-8,-6,-4.5), 
+       cex=0.75, 
+       ylim=c(-3, 24),
+       order=order(factor(dat$mlpa_region, level=c("South","Central","North"))), 
+       rows=c(2:6,9:13,16:20),
+       mlab=mlabfun("RE Model", res),
+       slab=paste(dat$group),
+       psize=1.3, header="Region | Monitoring Group")
+
+### set font expansion factor (as in forest() above) and use a bold font
+op <- par(cex=0.75, font=2)
+ 
+### add additional column headings to the plot
+
+### add text for the subgroups
+text(-8, c(21,14,7), pos=4, c("North",
+                               "Central",
+                               "South"))
+
+
+### set par back to the original settings
+par(cex=1.05)
+ 
+### fit random-effects model in the three subgroups
+res.n <- rma(yi, vi, subset=(mlpa_region=="North"), data=dat, slab=paste(group, mlpa_region))
+res.c <- rma(yi, vi, subset=(mlpa_region=="Central"), data=dat, slab=paste(group, mlpa_region))
+res.s <- rma(yi, vi, subset=(mlpa_region=="South"),  data=dat, slab=paste(group, mlpa_region))
+
+### add summary polygons for the three subgroups
+#addpoly(res.n, row=11, mlab=mlabfun("RE Model for Subgroup", res.n))
+addpoly(res.n, row=15, mlab=mlabfun("RE Model for Subgroup", y=res.n))
+addpoly(res.c, row= 8, mlab=mlabfun("RE Model for Subgroup", y=res.c))
+addpoly(res.s, row= 1, mlab=mlabfun("RE Model for Subgroup", y=res.s))
+
+
+### fit meta-regression model to test for subgroup differences
+res <- rma(yi, vi, mods = ~ mlpa_region, data=dat)
+ 
+### add text for the test of subgroup differences
+text(-8, -2.5, pos=4, cex=0.75, bquote(paste("Test for Subgroup Differences: ",
+     Q[M], " = ", .(formatC(res$QM, digits=2, format="f")), ", df = ", .(res$p - 1),
+     ", p = ", .(formatC(res$QMp, digits=2, format="f")))))
+
+text(x =-0.2, y = 23, "REF",  pos=2, col="blue", font=2)
+text(x =1.2, y = 23, "MPA",  pos=2, col="red ", font=2)
+text(x =-4.8, y = 24.5, "Diversity (Shannon H')",  cex=0.8, pos=2, font=3)
+
+
+
+```
+
+
+
+
+
+
+
+# by focal year - 2016-2019
 ```{r}
 
 region.MPAlevel.2018<- meta.data%>% 
               group_by(group,year, affiliated_mpa, mlpa_region, mpa_designation,variable,indicator)%>%
-              filter(year=='2018')%>%
-              filter(group=='CCFRP'|group=='Kelp forest-SWATH' | group=='Kelp forest-UPC' | group=='rocky-LT' )%>%
+              filter(year=='2016' | year=='2017'|year=='2018' | year=='2019')%>%
+              filter(group=='CCFRP'|group=='Kelp forest-SWATH' | group=='Kelp forest-UPC' | group=='rocky-LT')%>%
               summarize(group.mean = mean(mean,na.rm=TRUE))  #no. MPA 'sites' where year is unit of rep
               
 region.2018<- region.MPAlevel.2018%>%
@@ -551,7 +657,7 @@ View(smd.final)
 dat <- escalc(measure="SMD", m1i=group.avg_MPA, m2i=group.avg_REF, sd1i=sd_MPA, sd2i=sd_REF, n1i=n_MPA, n2i=n_REF, data=smd.final, slab=paste(group)) 
 
 #fit random effects model
-res <- rma(yi,vi,method="REML", data=dat, slab=paste(group)) 
+res <- rma(yi,vi,method="REML", level=95, data=dat,  slab=paste(group)) 
 
 
 ### a little helper function to add Q-test, I^2, and tau^2 estimate info
@@ -575,6 +681,7 @@ forest(res, xlim=c(-8, 6), #at=log(c(0.05, 0.25, 1, 4)), #atransf=exp,
        order=order(factor(dat$mlpa_region, level=c("South","Central","North"))), 
        rows=c(2:5,8:11,14:17),
        mlab=mlabfun("RE Model", res),
+      slab=paste(dat$group),
        psize=1.3, header="Region | Monitoring Group")
 
 ### set font expansion factor (as in forest() above) and use a bold font
@@ -583,7 +690,7 @@ op <- par(cex=0.75, font=2)
 ### add additional column headings to the plot
 
 ### add text for the subgroups
-text(-8, c(21,14,7), pos=4, c("North",
+text(-8, c(18,12,6), pos=4, c("North",
                                "Central",
                                "South"))
 
@@ -592,14 +699,14 @@ text(-8, c(21,14,7), pos=4, c("North",
 par(cex=1.05)
  
 ### fit random-effects model in the three subgroups
-res.n <- rma(yi, vi, subset=(mlpa_region=="North"), data=dat, slab=paste(group, mlpa_region))
-res.c <- rma(yi, vi, subset=(mlpa_region=="Central"), data=dat, slab=paste(group, mlpa_region))
-res.s <- rma(yi, vi, subset=(mlpa_region=="South"),  data=dat, slab=paste(group, mlpa_region))
+res.n <- rma(yi, vi, subset=(mlpa_region=="North"), level=95, data=dat, slab=paste(group, mlpa_region))
+res.c <- rma(yi, vi, subset=(mlpa_region=="Central"), level=95, data=dat, slab=paste(group, mlpa_region))
+res.s <- rma(yi, vi, subset=(mlpa_region=="South"), level=95, data=dat, slab=paste(group, mlpa_region))
 
 ### add summary polygons for the three subgroups
 #addpoly(res.n, row=11, mlab=mlabfun("RE Model for Subgroup", res.n))
-addpoly(res.n, row=15, mlab=mlabfun("RE Model for Subgroup", y=res.n))
-addpoly(res.c, row= 8, mlab=mlabfun("RE Model for Subgroup", y=res.c))
+addpoly(res.n, row=13, mlab=mlabfun("RE Model for Subgroup", y=res.n))
+addpoly(res.c, row= 7, mlab=mlabfun("RE Model for Subgroup", y=res.c))
 addpoly(res.s, row= 1, mlab=mlabfun("RE Model for Subgroup", y=res.s))
 
 
@@ -638,16 +745,21 @@ This analysis uses a t-test on before/after means and compares treatment (MPA) a
 
 #calculate MPA-level means across all years 
 ```{r}
+meta.data$mpa_designation<- recode_factor(meta.data$mpa_designation, reference="REF", SC="MPA", SMR_SCMA="MPA", SMR_SMCA="MPA", SMCA="MPA",SMR="MPA")
 MPA.means<- meta.data%>%
-  group_by(group,mlpa_region, affiliated_mpa, mpa_designation,variable,indicator)%>%
+  group_by(group,mlpa_region, affiliated_mpa, mpa_designation,variable,indicator,survey_period)%>%
   summarize(MPA_mean = mean(mean,na.rm=TRUE), 
-            sd=sd(mean), # standard deviation of across MPAs where indicator was observed/recorded
+            sd=mean(sd), # standard deviation of across MPAs where indicator was observed/recorded
             n=n())%>%#no. MPA 'sites' where year is unit of rep
             pivot_wider(names_from = mpa_designation, #convert to wide format for {metafor}
             values_from = c(MPA_mean, sd, n)
             #names_glue = "{mpa_designation}_{value}")
 )
-MPA.means
+MPA.means <- MPA.means %>%
+        pivot_wider(names_from = survey_period, #convert to wide format for {metafor}
+            values_from = c(MPA_mean_REF, MPA_mean_MPA, sd_REF,sd_MPA, n_REF, n_MPA))
+
+
 ```
 
 #create function to calculate t statistic using input means, rather than point data.
@@ -753,6 +865,119 @@ text(x =2.5, y = 6.5, "REF",  pos=2, col="blue", font=2)
 text(x=8.6, y=6.5,pos=2, "SMD", font=2)
 text(x=11, y=6.5,pos=2, "[95% CI]", font=2)
 ```
+
+
+
+
+
+
+
+
+*** 
+To-do:
+
+Response ratios plotted like forest plot
+
+
+
+```{r}
+input_file <- "Ecol_perform_metrics_means.xlsx" 
+
+means <- readxl::read_excel(file.path(data_path, input_file), 
+                            sheet=1, na = c("NA", "."), trim_ws = T)
+
+```
+
+
+
+## Manually Calculate T Score, P Value, and logRR
+
+Reformat the data by the affiliated MPA to calculate the difference in means between the MPA and its reference sites.
+```{r}
+means_format <- means %>% 
+  mutate(mpa_designation = if_else(mpa_designation %in% c("reference", "REF"), "REF", "MPA")) %>% 
+  filter(!(group %in% c("rocky-bio", "rocky-LT"))) %>% 
+  pivot_wider(id_cols = c(affiliated_mpa, group, mlpa_region, variable, indicator, year),
+              names_from = mpa_designation,
+              values_from = c(mean, sd, n)) %>% 
+  drop_na()
+
+#dat <- escalc(measure="SMD", m1i=mean_MPA, m2i=mean_REF, sd1i=sd_MPA, sd2i=sd_REF, n1i=n_MPA, n2i=n_REF, data=means_format, slab=paste(group)) 
+
+
+
+#means by MPA
+
+mu_site <- means_format %>% 
+  mutate(mean_diff = mean_MPA-mean_REF,
+         se        = sqrt((sd_MPA^2/n_MPA)+(sd_REF^2/n_REF)),
+         t_score   = mean_diff/se,
+         df        = n_MPA + n_REF - 2,
+         p_value   = pt(t_score, df, lower.tail = FALSE),
+         sig       = if_else(p_value < 0.05, 1, 0),
+         cohens_d  = abs(mean_diff)/(sqrt(((sd_MPA^2*(n_MPA-1))+(sd_REF^2*(n_REF-1)))/df)),
+         RR        = log(mean_MPA/mean_REF))
+
+ 
+mu_site[is.finite(mu_site$RR) & is.finite(mu_site$RR), ]     #drop NA and Inf for now...
+
+
+
+#means by region
+
+mu_region <- as.data.frame(means %>% 
+  mutate(mpa_designation = if_else(mpa_designation %in% c("reference", "REF"), "REF", "MPA")) %>% 
+  group_by( group, mlpa_region, mpa_designation, variable, indicator) %>%
+  summarize(yr.mean = mean(mean,na.rm=TRUE), 
+                        sd=sd(mean), # standard deviation across MPAs AND YEARS where indicator was observed/recorded. 
+                        n=n()) %>%
+  pivot_wider(id_cols = c(group, mlpa_region, mpa_designation, variable, indicator),
+              names_from = mpa_designation,
+              values_from = c(yr.mean, sd, n)) %>% 
+  mutate(n_total   = n_MPA+n_REF,
+         mean_diff = yr.mean_MPA-yr.mean_REF,
+         se        = sqrt((sd_MPA^2/n_MPA)+(sd_REF^2/n_REF)),
+         t_score   = mean_diff/se,
+         df        = n_MPA + n_REF - 2,
+         p_value   = pt(t_score, df, lower.tail = FALSE),
+         sig       = if_else(p_value < 0.05, 1, 0),
+         cohens_d  = abs(mean_diff)/(sqrt(((sd_MPA^2*(n_MPA-1))+(sd_REF^2*(n_REF-1)))/df)),
+         RR     = yr.mean_MPA/yr.mean_REF))
+mu_region <- mu_region[is.finite(mu_region$RR) & is.finite(mu_region$RR), ]  
+
+mu_region <- mu_region %>%
+        filter(se>0)%>%
+        mutate(
+          lower.CI  = (RR - (qt(0.975, df)*n_total/sqrt(n_total))),
+          upper.CI  = (RR + (qt(0.975, df)*n_total/sqrt(n_total))),
+          )
+
+
+```
+
+
+```{r}
+
+mu_region$indicator<- recode_factor(mu_region$indicator, Diversity="diversity")
+mu_region$indicator<- recode_factor(mu_region$indicator, shannon="diversity")
+mu_region$indicator<- recode_factor(mu_region$indicator, Richness="richness")
+
+
+mu_region.H <- mu_region %>%
+  filter(variable=="All Fish" | 
+         variable=="INVALG" |
+         variable=="all species",
+         indicator=='diversity')
+
+View(mu_region.H)
+```
+
+
+
+
+
+
+
 
 
 
