new workflow to create 4 regions

--- a/habitat-diversity/means-map.Rmd
+++ b/habitat-diversity/means-map.Rmd
@@ -29,37 +29,124 @@ library(RColorBrewer)
 # Define the paths and file names
 
 path_aurora <- "/home/shares/ca-mpa/data/sync-data/"
-shp_dir <- "CeNCOOS_shapefiles/Ecological_Monitoring_Sites"
+shp_dir <- "spatial_data"
+cencoos_dir <- "CeNCOOS_shapefiles/Ecological_Monitoring_Sites"
 shp_path <- file.path(path_aurora, shp_dir)
 
-shp_habitats <- list.files(path = shp_path, pattern = "shp", full.names = TRUE)
+shp_ca <- file.path(path_aurora, shp_dir, "ca_boundary_wgs84.shp")
 
-shp_ca <- file.path(path_aurora, "CeNCOOS_shapefiles/ca_boundary_wgs84.shp")
+
+input_file <- "Ecol_perform_metrics_means_working.xlsx" 
+
+map_file <- "mpa-attributes.xlsx"
+
+
 ```
 
 
+# Read the input files
 
-```{r read inputs}
+
+```{r read inputs, message=FALSE, warning=FALSE}
+
+perform_metrics <- readxl::read_excel(file.path(path_aurora, input_file), 
+                            sheet=1, na = c("NA", "na"), trim_ws = T)
+
+# map_attributes <-  readxl::read_excel(file.path(data_path, map_file), 
+#                             sheet=1, na = c("NA", "."), trim_ws = T)
 
 # Read California border
 ca <- st_read(shp_ca)
+st_crs(ca)
 
-# Read Habitats sites
-habitat_sites_list <- local_datasets <- map(shp_habitats, ~st_read(.x))
 
-# Make it a named list
-hs_name <- basename(shp_habitats) %>% 
-  str_split(.,"_", n=2) %>% 
-  map_chr(.,1)
+# st_perform_metrics <- perform_metrics %>% 
+#   st_as_sf(.,coords=c("lon_wgs84", "lat_wgs84"), crs=4326)
 
-habitat_sites_list <- set_names(habitat_sites_list, hs_name)
 
-# fix marine names (to be improved)
-names(habitat_sites_list$marine)[1] <- "site_name"
-habitat_sites_list$pisco <- habitat_sites_list$pisco %>%
-  mutate(MPA_REGION = mlpa_regio)
 
 ```
+We have some sites without coordinates. Also the precision of the location seems to vary betwee sites. **What should be our reference file?**
+
+```{r, eval=FALSE}
+perform_metrics %>% 
+  filter(is.na(lat_wgs84) | is.na(lon_wgs84)) %>% 
+  distinct(affiliated_mpa)
+```
+`gull island smr`, `carmel bay smca`, `anacapa island smr` are missing lat/long info. Dropping for now.
+
+
+Still fails. There are character in the longitude column. Let's find which rows are affected
+
+```{r}
+perform_metrics %>% 
+  filter(is.na(as.numeric(lon_wgs84))) %>% 
+  distinct(affiliated_mpa)
+```
+`bodega head smca` seems to have some strange values for the longitude. Dropping for now.
+
+```{r}
+perform_metrics_cleaned <- perform_metrics %>% 
+  filter(!is.na(lat_wgs84) | !is.na(lon_wgs84)) %>% 
+  filter(!is.na(as.numeric(lon_wgs84))) 
+
+
+# perform_metrics_static <- perform_metrics_cleaned %>%
+#   select(group,mlpa_region, affiliated_mpa, mpa_class, mpa_designation, lat_wgs84, lon_wgs84) %>%
+#   distinct()
+# 
+# dim(perform_metrics_static)
+
+# st_perform_metrics <- perform_metrics %>% 
+  # st_as_sf(.,coords=c("lon_wgs84", "lat_wgs84"), crs=4326)
+
+```
+
+```{r}
+
+st_perform_metrics <- perform_metrics_cleaned %>% 
+  st_as_sf(.,coords=c("lon_wgs84", "lat_wgs84"), crs=4326)
+
+
+tm_reg <- tm_shape(ca) + 
+  tm_borders("black", lwd = .5) +
+tm_shape(st_perform_metrics) + 
+  tm_symbols(col = "mlpa_region",  alpha = 0.8, border.lwd = 0, size = .2, title.col = "Main Regions")
+
+tm_reg
+```
+Export as shapefile
+```{r}
+# Write combined shapefile
+st_write(st_perform_metrics, dsn = file.path(path_aurora, cencoos_dir, "most_sampling_sites.geojson"), delete_dsn =TRUE)
+```
+
+Manually select the Island in QGIS and add a `channel_island` column coded with `1` (is a channel island site) and `0`.
+
+```{r}
+
+# read the new file in
+st_perform_metrics_ci <- st_read(dsn = file.path(path_aurora, cencoos_dir, "most_sampling_sites_island.geojson"))
+
+# Update the mlpa_region using this flag
+st_perform_metrics_ci <- st_perform_metrics_ci %>%
+  mutate(mlpa_region = ifelse(channel_island==1, "island", mlpa_region)) %>%
+  select(-channel_island)
+
+
+tm_reg4 <- tm_shape(ca) + 
+  tm_borders("black", lwd = .5) +
+tm_shape(st_perform_metrics_ci) + 
+  tm_symbols(col = "mlpa_region",  alpha = 0.8, border.lwd = 0, size = .2, title.col = "Main Regions")
+
+tm_reg4
+
+# save the file
+st_write(st_perform_metrics_ci,file.path(path_aurora, "Ecol_perform_metrics_means_4regions.csv"), delete_dsn =TRUE)
+
+
+```
+
 
 ```{r clean data}
 # Create missing fields
@@ -100,7 +187,7 @@ habitat_sites_all <- habitat_sites_all %>%
 
 # Order the regions from North to South using factors
 habitat_sites_all <- habitat_sites_all %>%
-  mutate(mpa_reg_fact = factor(MPA_REGION, ordered = TRUE, 
+  mutate(mpa_reg_fact = factor(MPA_REGION, ordered = TRUE,
                                 levels = c("NCSR", "NCCSR", "CCSR", "SCSR")
                                )
          )
@@ -109,13 +196,23 @@ habitat_sites_all <- habitat_sites_all %>%
 habitat_sites_all <- habitat_sites_all %>%
   mutate(time_period = end_year - start_year + 1)
 
+# Write combined shapefile
+# st_write(habitat_sites_all, file.path(shp_path, "all_sampling_sites.shp"))
+
+# Here I used QGIS to spatially select all the sites that were located around the channel island. I created a new column `chanIsland` where 1 means channel island site and 0 means coastal sites.
+
+# I reread the data in
+# habitat_sites_all <- st_read(file.path(shp_path, "all_sampling_sites.shp"))
+
 ```
 
 
 ```{r join}
 # Join the shapefile and the means data frames
 
-habitat_sites_all_means <- left_join(habitat_sites_all, means_t, c("MPA_NAME"="affiliated_mpa"))
+# Means_t come from Cori's code  `means-explore.Rmd`
+
+habitat_sites_all_means <- left_join(habitat_sites_all, means_t, c("MPA_NAM"="affiliated_mpa"))
 
 ```
 
